Fix visibility.

--- a/interfaces/web_desktop/css/static.css
+++ b/interfaces/web_desktop/css/static.css
@@ -49,3 +49,8 @@ html body.Login #OfflineMessage
 {
 	display: none;
 }
+
+html > body
+{
+	visibility: visible;
+}
